# Petrichor

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Petrichor.sln  README.md  build.sh  conan_install.bat  conanfile-linux.txt  conanfile.txt  conanprofile-clang.txt  make_sln_vs2017.bat  make_sln_vs2019.bat  settings.json
.circleci/: config.yml
AppPetrichor/: AppPetrichor.cpp  AppPetrichor.vcxproj  AppPetrichor.vcxproj.filters  CMakeLists.txt
Benchmark/: CMakeLists.txt
Benchmark/Math/: BenchmarkVector3f.cpp
LibPetrichor/: CMakeLists.txt  LibPetrichor.vcxproj  LibPetrichor.vcxproj.filters
LibPetrichor/Core/: Assert.h  Camera.cpp  Camera.h  Color3f.cpp  Color3f.h  Constants.h  Environment.cpp  Environment.h  HitInfo.h  Logger.cpp  Logger.h  Petrichor.cpp  Petrichor.h  Ray.h  RenderSetting.h  RenderSettingLoader.cpp  RenderSettingLoader.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  SceneSettings.cpp  SceneSettings.h  Texture2D.cpp  Texture2D.h  TileManager.cpp  TileManager.h
LibPetrichor/Core/AOV/: AOVDenoisingAlbedo.cpp  AOVDenoisingAlbedo.h  AOVDenoisingNormal.cpp  AOVDenoisingNormal.h  AOVUVCoordinate.cpp  AOVUVCoordinate.h  AOVWorldNormal.cpp  AOVWorldNormal.h
LibPetrichor/Core/Accel/: AABB.cpp  AABB.h  AccelBase.h  AccelerationStructureBase.h  BVH.cpp  BVH.h  BVHNode.cpp  BVHNode.h  BinnedSAHBVH.cpp  BinnedSAHBVH.h  Bound.cpp  Bound.h  Bounds.cpp  Bounds.h  BruteForce.cpp  BruteForce.h  IAccelerationStructureBase.h  SweepBVH.cpp  SweepBVH.h
LibPetrichor/Core/Denoiser/: IntelOpenImageDenoiser.cpp  IntelOpenImageDenoiser.h
LibPetrichor/Core/File/: IFileLoader.h  JsonDef.h  JsonLoader.h
LibPetrichor/Core/Geometry/: Box.h  GeometryBase.cpp  GeometryBase.h  Mesh.cpp  Mesh.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  Vertex.cpp  Vertex.h
LibPetrichor/Core/Integrator/: PathTracing.cpp  PathTracing.h  SimplePathTracing.cpp  SimplePathTracing.h
LibPetrichor/Core/Material/: Emission.cpp  Emission.h  GGX.cpp  GGX.h  Glass.cpp  Glass.h  Lambert.cpp  Lambert.h  MatMix.cpp  MatMix.h  MaterialBase.h  MixMaterial.cpp  MixMaterial.h
LibPetrichor/Core/Sampler/: ISampler1D.h  ISampler2D.h  MicroJitteredSampler.cpp  MicroJitteredSampler.h  RandomSampler1D.h  RandomSampler2D.cpp  RandomSampler2D.h
LibPetrichor/Core/Thread/: ThreadPool.cpp  ThreadPool.h
LibPetrichor/Math/: AliasMethod.cpp  AliasMethod.h  Halton.cpp  Halton.h  MathUtils.h  OrthonormalBasis.cpp  OrthonormalBasis.h  Vector3f.cpp  Vector3f.h
LibPetrichor/Profiler/: Profiler.cpp  Profiler.h
LibPetrichor/Random/: XorShift.h
LibPetrichor/TestScene/: TestScene.cpp  TestScene.h
Output/: .gitignore
Petrichor/: Petrichor.vcxproj  Petrichor.vcxproj.filters
PetrichorTest/: PetrichorTest.vcxproj  PetrichorTest.vcxproj.filters
Resource/: .gitignore
Src/: stdafx.h
Src/Core/: Assert.h  Camera.cpp  Camera.h  Constants.h  Environment.cpp  Environment.h  HitInfo.h  Petrichor.cpp  Petrichor.h  Ray.h  Scene.h  Texture2D.cpp  Texture2D.h  TileManager.h  main.cpp
Src/Core/Accel/: BVH.cpp  BVHNode.cpp  BVHNode.h  Bound.cpp  Bound.h  BruteForce.cpp  BruteForce.h  IAccelerationStructureBase.h
Src/Core/Geometry/: GeometryBase.cpp  Mesh.cpp  Mesh.h  Sphere.cpp  Vertex.cpp  Vertex.h
Src/Core/Integrator/: PathTracing.cpp  PathTracing.h
Src/Core/Material/: GGX.cpp  GGX.h  Lambert.cpp  Lambert.h  MatMix.cpp  MaterialBase.h
Src/Core/Sampler/: MicroJitteredSampler.cpp  MicroJitteredSampler.h  RandomSampler2D.cpp  RandomSampler2D.h
Src/Math/: Halton.h  Vector3f.h
Src/Test/: Vector3fTest.cpp
TestPetrichor/: CMakeLists.txt  TestMain.cpp
TestPetrichor/Math/: TestAliasMethod.cpp  TestVector3f.cpp
